--- a/.cicd/eosio-installation-images.yml
+++ b/.cicd/eosio-installation-images.yml
@@ -2,7 +2,9 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Build"
     command:
-      - echo "Got Here."
+      - bash ./.cicd/installation-build.sh"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: $BUILD_TIMEOUT
