--- a/.cicd/eosio-installation-images.yml
+++ b/.cicd/eosio-installation-images.yml
@@ -2,9 +2,11 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Build"
     command:
-      - cd ./.cicd && bash ./installation-build.sh
+      - bash ./.cicd/installation-build.sh
     env:
       IMAGE_TAG: "ubuntu-18.04"
+      ENABLE_INSTALL: true
+      ENABLE_BUILD: true
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: $BUILD_TIMEOUT
