--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,79 +1,144 @@
 steps:
-  - wait
 
-  - trigger: "eosio-base-images-beta"
-    label: ":docker: Ensure Base Images"
-    build:
-      commit: "${BUILDKITE_COMMIT}"
-      branch: "${BUILDKITE_BRANCH}"
-      
-  - wait
-
-  - label: ":aws: Amazon_Linux 2.0 - Build & Test"
-    agents:
-      queue: "automation-eos-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          debug: $DEBUG
-          image: "eosio/producer:eosio-amazonlinux-2-d89cfcba2c5002f7c79e5f2ea07d9f514b960fcd"
-          environment:
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-            - "JOBS" # Number for -j make/ctest args.
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-
-  - label: ":centos: CentOS 7.6 - Build & Test"
+  - label: ":aws: Amazon_Linux 2.0 - Build"
     command:
-      - ""
+      - "bash ./.cicd/run.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "amazonlinux-2"
+      ENABLE_BUILD: true
+      BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          debug: true
-          image: "eosio/producer:eosio-centos-7.6-8837beff70f9bb04717630bdeb3a29ff984ae985"
-          environment:
-            # - "ENABLE_LR_TESTS=true"
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-            - "JOBS" # Number for -j make/ctest args.
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_AMAZON_LINUX_2
 
-  - label: ":ubuntu: Ubuntu 16.04 - Build & Test"
-    agents:
-      queue: "automation-eos-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          debug: $DEBUG
-          image: "eosio/producer:eosio-ubuntu-16.04-a86f678994109fd09a13468f9b8f5ebf10b48a6b"
-          environment:
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-            - "JOBS" # Number for -j make/ctest args.
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-
-  - label: ":ubuntu: Ubuntu 18.04 - Build & Test"
-    agents:
-      queue: "automation-eos-builder-fleet"
-    plugins:
-      - docker#v3.2.0:
-          debug: $DEBUG
-          image: "eosio/producer:eosio-ubuntu-18.04-d1248048f40158965ff9876c0c21ac728bb82da6"
-          environment:
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-            - "JOBS" # Number for -j make/ctest args.
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-
-  - label: ":darwin: macOS 10.14 - Build & Test"
+  - label: ":centos: CentOS 7.6 - Build"
     command:
-      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb"
+      - "bash ./.cicd/run.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env: 
+      IMAGE_TAG: "centos-7.6"
+      ENABLE_BUILD: true
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+
+  - label: ":ubuntu: Ubuntu 16.04 - Build"
+    command:
+      - "bash ./.cicd/run.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      ENABLE_BUILD: true
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
+
+  - label: ":ubuntu: Ubuntu 18.04 - Build"
+    command:
+      - "bash ./.cicd/run.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      ENABLE_BUILD: true
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
+
+  - label: ":darwin: macOS 10.14 - Build"
+    command:
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && mkdir -p build && cd build && cmake .."
-      - "cd eos/build && make -j$(getconf _NPROCESSORS_ONLN)"
-      - "if ${ENABLE_PARALLEL_TESTS:-true}; then cd eos/build && ctest -j$(getconf _NPROCESSORS_ONLN) -LE _tests --output-on-failure -T Test; fi"
-      - "if ${ENABLE_SERIAL_TESTS:-true}; then cd eos/build && mkdir -p ./mongodb && mongod --dbpath ./mongodb --fork --logpath mongod.log && ctest -L nonparallelizable_tests --output-on-failure -T Test; fi"
-      - "if ${ENABLE_LR_TESTS:-false}; then cd eos/build && ctest -L long_running_tests --output-on-failure -T Test; fi"
-      - "cd eos && echo $(pkill mongod || :) && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+      - "cd eos && ENABLE_BUILD=${ENABLE_BUILD:-true} ./.cicd/run.sh"
+      - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    plugins:
+      - chef/anka#v0.5.1:
+          no-volume: true
+          inherit-environment-vars: true
+          vm-name: 10.14.4_6C_14G_40G
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          modify-cpu: 12
+          modify-ram: 24
+          always-pull: true
+          debug: true
+          wait-network: true
+    agents:
+      - "queue=mac-anka-large-node-fleet"
+
+  - wait
+
+  - label: ":aws: Amazon_Linux 2.0 - Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2.0 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/run.sh"
+    env:
+      IMAGE_TAG: "amazonlinux-2"
+      ENABLE_PARALLEL_TESTS: true
+      ENABLE_SERIAL_TESTS: true
+      ENABLE_LONG_RUNNING_TESTS: false
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_AMAZON_LINUX_2
+
+  - label: ":centos: CentOS 7.6 - Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/run.sh"
+    env: 
+      IMAGE_TAG: "centos-7.6"
+      ENABLE_PARALLEL_TESTS: true
+      ENABLE_SERIAL_TESTS: true
+      ENABLE_LONG_RUNNING_TESTS: false
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
+
+  - label: ":ubuntu: Ubuntu 16.04 - Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/run.sh"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      ENABLE_PARALLEL_TESTS: true
+      ENABLE_SERIAL_TESTS: true
+      ENABLE_LONG_RUNNING_TESTS: false
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
+
+  - label: ":ubuntu: Ubuntu 18.04 - Test"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/run.sh"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      ENABLE_PARALLEL_TESTS: true
+      ENABLE_SERIAL_TESTS: true
+      ENABLE_LONG_RUNNING_TESTS: false
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
+
+  - label: ":darwin: macOS 10.14 - Test"
+    command:
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
+      - "cd eos && ENABLE_PARALLEL_TESTS=${ENABLE_PARALLEL_TESTS:-true} ENABLE_SERIAL_TESTS=${ENABLE_SERIAL_TESTS:-true} ENABLE_LONG_RUNNING_TESTS=${ENABLE_LONG_RUNNING_TESTS:-false} ./.cicd/run.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -104,13 +169,11 @@ steps:
 
   - wait
   
-  - trigger: "eosio-installation-images"
-    label: ":docker: Start EOS Installation Pipeline"
+  - trigger: "eosio-dot-contracts-base-images-beta"
+    label: ":docker: Ensure EOSIO Installation Base Image"
     build:
       commit: "${BUILDKITE_COMMIT}"
       branch: "${BUILDKITE_BRANCH}"
-      env:
-        FORCE_BINARIES_BUILD: "${FORCE_BINARIES_BUILD}"
     async: true
 
   - wait
@@ -119,49 +182,34 @@ steps:
     command:
       - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
-    plugins:
-      - docker#v3.2.0:
-          debug: true
-          image: "eosio/producer:eosio-centos-7.6-8837beff70f9bb04717630bdeb3a29ff984ae985"
-          environment:
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
+    env:
+      BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
-    timeout: 10
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
 
   - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
     command:
       - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
-    plugins:
-      - docker#v3.2.0:
-          debug: $DEBUG
-          image: "eosio/producer:eosio-ubuntu-16.04-a86f678994109fd09a13468f9b8f5ebf10b48a6b"
-          environment:
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
+    env:
+      BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
-    timeout: 10
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
 
   - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
     command:
       - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
-    plugins:
-      - docker#v3.2.0:
-          debug: $DEBUG
-          image: "eosio/producer:eosio-ubuntu-18.04-d1248048f40158965ff9876c0c21ac728bb82da6"
-          environment:
-            - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
-          mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
-          propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
+    env:
+      BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
-    timeout: 10
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
 
   - label: ":darwin: Mojave - Package Builder"
     command:
