--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -50,6 +50,7 @@ steps:
           propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
 
   - label: ":ubuntu: Ubuntu 18.04 - Build & Test"
+    command: ". .cicd/build-then-push.sh"
     agents:
       queue: "automation-eos-builder-fleet"
     plugins:
