--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -2,11 +2,10 @@ steps:
 
   - label: ":aws: Amazon_Linux 2.0 - Build"
     command:
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
       IMAGE_TAG: "amazonlinux-2"
-      ENABLE_BUILD: true
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -15,11 +14,10 @@ steps:
 
   - label: ":centos: CentOS 7.6 - Build"
     command:
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env: 
       IMAGE_TAG: "centos-7.6"
-      ENABLE_BUILD: true
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -27,11 +25,10 @@ steps:
 
   - label: ":ubuntu: Ubuntu 16.04 - Build"
     command:
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
-      ENABLE_BUILD: true
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -40,11 +37,10 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Build"
     command:
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
       IMAGE_TAG: "ubuntu-18.04"
-      ENABLE_BUILD: true
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -55,7 +51,7 @@ steps:
     command:
       - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && ENABLE_BUILD=${ENABLE_BUILD:-true} ./.cicd/run.sh"
+      - "cd eos && ./.cicd/build.sh"
       - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     plugins:
       - chef/anka#v0.5.1:
@@ -73,15 +69,12 @@ steps:
 
   - wait
 
-  - label: ":aws: Amazon_Linux 2.0 - Test"
+  - label: ":aws: Amazon_Linux 2.0 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2.0 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/parallel-tests.sh"
     env:
       IMAGE_TAG: "amazonlinux-2"
-      ENABLE_PARALLEL_TESTS: true
-      ENABLE_SERIAL_TESTS: true
-      ENABLE_LONG_RUNNING_TESTS: false
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
@@ -91,54 +84,114 @@ steps:
   - label: ":centos: CentOS 7.6 - Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/parallel-tests.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
-      ENABLE_PARALLEL_TESTS: true
-      ENABLE_SERIAL_TESTS: true
-      ENABLE_LONG_RUNNING_TESTS: false
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
     skip: $SKIP_CENTOS_7
 
-  - label: ":ubuntu: Ubuntu 16.04 - Test"
+  - label: ":ubuntu: Ubuntu 16.04 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/parallel-tests.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
-      ENABLE_PARALLEL_TESTS: true
-      ENABLE_SERIAL_TESTS: true
-      ENABLE_LONG_RUNNING_TESTS: false
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
     skip: $SKIP_UBUNTU_16
 
-  - label: ":ubuntu: Ubuntu 18.04 - Test"
+  - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/run.sh"
+      - "bash ./.cicd/parallel-tests.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
-      ENABLE_PARALLEL_TESTS: true
-      ENABLE_SERIAL_TESTS: true
-      ENABLE_LONG_RUNNING_TESTS: false
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
     skip: $SKIP_UBUNTU_18
 
-  - label: ":darwin: macOS 10.14 - Test"
+  - label: ":darwin: macOS 10.14 - Unit Test"
     command:
       - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ENABLE_PARALLEL_TESTS=${ENABLE_PARALLEL_TESTS:-true} ENABLE_SERIAL_TESTS=${ENABLE_SERIAL_TESTS:-true} ENABLE_LONG_RUNNING_TESTS=${ENABLE_LONG_RUNNING_TESTS:-false} ./.cicd/run.sh"
+      - "cd eos && bash ./.cicd/parallel-tests.sh"
+    plugins:
+      - chef/anka#v0.5.1:
+          no-volume: true
+          inherit-environment-vars: true
+          vm-name: 10.14.4_6C_14G_40G
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          modify-cpu: 12
+          modify-ram: 24
+          always-pull: true
+          debug: true
+          wait-network: true
+    agents:
+      - "queue=mac-anka-large-node-fleet"
+
+
+  - label: ":aws: Amazon_Linux 2.0 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2.0 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/long-running-tests.sh"
+    env:
+      IMAGE_TAG: "amazonlinux-2"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_AMAZON_LINUX_2
+
+  - label: ":centos: CentOS 7.6 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/long-running-tests.sh"
+    env: 
+      IMAGE_TAG: "centos-7.6"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_CENTOS_7
+
+  - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/long-running-tests.sh"
+    env: 
+      IMAGE_TAG: "ubuntu-16.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_16
+
+  - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
+    command:
+      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
+      - "bash ./.cicd/long-running-tests.sh"
+    env:
+      IMAGE_TAG: "ubuntu-18.04"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
+
+  - label: ":darwin: macOS 10.14 - Long-Running Tests"
+    command:
+      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
+      - "cd eos && bash ./.cicd/long-running-tests.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
