--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -10,7 +10,7 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: "( [[ ${SKIP_AMAZON_LINUX_2:-false} == true ]] || [[ ${SKIP_UNIT_TESTS:-false} == true ]] )"
+    skip: ( [[ ${SKIP_AMAZON_LINUX_2:-false} == true ]] || [[ ${SKIP_UNIT_TESTS:-false} == true ]] )
 
 
   # - label: ":centos: CentOS 7.6 - Build"
